new dual ingest setup

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,17 +7,28 @@ services:
     environment:
       - USP_LICENSE_KEY
       - CHANNEL=test
-      - PUB_POINT_OPTS=--archiving=1 --archive_length=21600 --archive_segment_length=3600 --dvr_window_length=1800 --restart_on_encoder_reconnect
+      - PUB_POINT_OPTS=--archiving=1 --archive_length=3600 --archive_segment_length=1800 --dvr_window_length=6n0 --restart_on_encoder_reconnect --mpd.min_buffer_time=48/25 --mpd.suggested_presentation_delay=48/25 --hls.minimum_fragment_length=48/25 --mpd.minimum_fragment_length=48/25 --mpd.segment_template=time --hls.client_manifest_version=4
+      - LOG_LEVEL=debug
     healthcheck:
       test: kill -0 1
       interval: 2s
       timeout: 5s
       retries: 30
-  ffmpeg:
-    build: https://github.com/unifiedstreaming/live-demo.git#:ffmpeg
+  ffmpeg-enc1:
+    build: ffmpeg-enc1
     environment:
-      - PUB_POINT_URI=http://live-origin/test/test.isml/Streams(ffmpeg)
-      - LOGO_OVERLAY=
+      - PUB_POINT_URI=http://live-origin/test/test.isml/Streams(ffmpeg-enc1)
+      - FRAME_RATE=25
+      - GOP_LENGTH=48
+    depends_on:
+      live-origin:
+        condition: service_healthy
+  ffmpeg-enc2:
+    build: ffmpeg-enc2
+    environment:
+      - PUB_POINT_URI=http://live-origin/test/test.isml/Streams(ffmpeg-enc2)
+      - FRAME_RATE=25
+      - GOP_LENGTH=48
     depends_on:
       live-origin:
         condition: service_healthy
